# mozjs

./: CMakeLists.txt  README.md
.github/workflows/: cmake.yml
js/: CMakeLists.txt  js-config.h.in  selfhosted.js
js/public/js/: MemoryMetrics.h
js/src/: jsnum.cpp
js/src/builtin/: embedjs.py  which.py
js/src/jit/x86/: Architecture-x86.h
js/src/vm/: ScopeObject.h
mfbt/: CMakeLists.txt
mfbt/src/mozilla/: Char16.h  JSONWriter.h  TypeTraits.h
nspr/: CMakeLists.txt
tests/jsapi/: CMakeLists.txt  selfTest.cpp  testAddPropertyPropcache.cpp  testArgumentsObject.cpp  testArrayBuffer.cpp  testBindCallable.cpp  testBug604087.cpp  testCallNonGenericMethodOnProxy.cpp  testChromeBuffer.cpp  testClassGetter.cpp  testCloneScript.cpp  testConservativeGC.cpp  testContexts.cpp  testCustomIterator.cpp  testDebugger.cpp  testDeepFreeze.cpp  testDefineGetterSetterNonEnumerable.cpp  testDefineProperty.cpp  testEnclosingFunction.cpp  testErrorCopying.cpp  testException.cpp  testExternalStrings.cpp  testFindSCCs.cpp  testFreshGlobalEvalRedefinition.cpp  testFuncCallback.cpp  testFunctionProperties.cpp  testGCExactRooting.cpp  testGCFinalizeCallback.cpp  testGCHeapPostBarriers.cpp  testGCOutOfMemory.cpp  testGCStoreBufferRemoval.cpp  testHashTable.cpp  testHashTableInit.cpp  testIndexToString.cpp  testIntString.cpp  testIntTypesABI.cpp  testIntern.cpp  testIsInsideNursery.cpp  testJSEvaluateScript.cpp  testJitRValueAlloc.cpp  (+30 more)
tests/mfbt/: CMakeLists.txt
zlib/: CMakeLists.txt
