set(JSAPI_TEST_SRCS
  tests.cpp
  selfTest.cpp
  testAddPropertyPropcache.cpp
  testArgumentsObject.cpp
  testArrayBuffer.cpp
  testBindCallable.cpp
  testBug604087.cpp
  testCallNonGenericMethodOnProxy.cpp
  testChromeBuffer.cpp
  testClassGetter.cpp
  testCloneScript.cpp
  testConservativeGC.cpp
  testContexts.cpp
  testCustomIterator.cpp
  testDebugger.cpp
  testDeepFreeze.cpp
  testDefineGetterSetterNonEnumerable.cpp
  testDefineProperty.cpp
  testEnclosingFunction.cpp
  testErrorCopying.cpp
  testException.cpp
  testExternalStrings.cpp
  testFindSCCs.cpp
  testFreshGlobalEvalRedefinition.cpp
  testFuncCallback.cpp
  testFunctionProperties.cpp
  testGCExactRooting.cpp
  testGCFinalizeCallback.cpp
  testGCHeapPostBarriers.cpp
  testGCOutOfMemory.cpp
  testGCStoreBufferRemoval.cpp
  testHashTable.cpp
  testHashTableInit.cpp
  testIndexToString.cpp
  testIntern.cpp
  testIntString.cpp
  testIntTypesABI.cpp
  testIsInsideNursery.cpp
  testJSEvaluateScript.cpp
  testLookup.cpp
  testLooselyEqual.cpp
  testMappedArrayBuffer.cpp
  testNewObject.cpp
  testNullRoot.cpp
  testObjectEmulatingUndefined.cpp
  testOOM.cpp
  testOps.cpp
  testOriginPrincipals.cpp
  testParseJSON.cpp
  testPersistentRooted.cpp
  testProfileStrings.cpp
  testPropCache.cpp
  testRegExp.cpp
  testResolveRecursion.cpp
  testSameValue.cpp
  testScriptInfo.cpp
  testScriptObject.cpp
  testSetProperty.cpp
  testSetPropertyIgnoringNamedGetter.cpp
  testSourcePolicy.cpp
  testStringBuffer.cpp
  testStructuredClone.cpp
  testToIntWidth.cpp
  testTrap.cpp
  testTypedArrays.cpp
  testUncaughtError.cpp
  testUTF8.cpp
  testXDR.cpp)

if(ENABLE_ION)
  list(APPEND JSAPI_TEST_SRCS
    testJitRValueAlloc.cpp)
endif()

add_executable(jsapi-tests ${JSAPI_TEST_SRCS})
target_link_libraries(jsapi-tests PRIVATE js)
add_test(NAME jsapi COMMAND jsapi-tests)
