set(JSAPI_TEST_SRCS
  jsapi-tests/tests.cpp
  jsapi-tests/selfTest.cpp
  jsapi-tests/testAddPropertyPropcache.cpp
  jsapi-tests/testArgumentsObject.cpp
  jsapi-tests/testArrayBuffer.cpp
  jsapi-tests/testArrayBufferView.cpp
  jsapi-tests/testBindCallable.cpp
  jsapi-tests/testBug604087.cpp
  jsapi-tests/testCallNonGenericMethodOnProxy.cpp
  jsapi-tests/testChromeBuffer.cpp
  jsapi-tests/testClassGetter.cpp
  jsapi-tests/testCloneScript.cpp
  jsapi-tests/testContexts.cpp
  jsapi-tests/testDebugger.cpp
  jsapi-tests/testDeepFreeze.cpp
  jsapi-tests/testDefineGetterSetterNonEnumerable.cpp
  jsapi-tests/testDefineProperty.cpp
  jsapi-tests/testDefinePropertyIgnoredAttributes.cpp
  jsapi-tests/testEnclosingFunction.cpp
  jsapi-tests/testErrorCopying.cpp
  jsapi-tests/testException.cpp
  jsapi-tests/testExternalStrings.cpp
  jsapi-tests/testFindSCCs.cpp
  jsapi-tests/testForOfIterator.cpp
  jsapi-tests/testForwardSetProperty.cpp
  jsapi-tests/testFreshGlobalEvalRedefinition.cpp
  jsapi-tests/testFunctionProperties.cpp
  jsapi-tests/testGCAllocator.cpp
  jsapi-tests/testGCCellPtr.cpp
  jsapi-tests/testGCChunkPool.cpp
  jsapi-tests/testGCExactRooting.cpp
  jsapi-tests/testGCFinalizeCallback.cpp
  jsapi-tests/testGCHeapPostBarriers.cpp
  jsapi-tests/testGCMarking.cpp
  jsapi-tests/testGCNursery.cpp
  jsapi-tests/testGCOutOfMemory.cpp
  jsapi-tests/testGCStoreBufferRemoval.cpp
  jsapi-tests/testGetPropertyDescriptor.cpp
  jsapi-tests/testHashTable.cpp
  jsapi-tests/testHashTableInit.cpp
  jsapi-tests/testIndexToString.cpp
  jsapi-tests/testIntern.cpp
  jsapi-tests/testIntString.cpp
  jsapi-tests/testIntTypesABI.cpp
  jsapi-tests/testIsInsideNursery.cpp
  jsapi-tests/testJSEvaluateScript.cpp
  jsapi-tests/testLookup.cpp
  jsapi-tests/testLooselyEqual.cpp
  jsapi-tests/testMappedArrayBuffer.cpp
  jsapi-tests/testMutedErrors.cpp
  jsapi-tests/testNewObject.cpp
  jsapi-tests/testNullRoot.cpp
  jsapi-tests/testObjectEmulatingUndefined.cpp
  jsapi-tests/testOOM.cpp
  jsapi-tests/testOps.cpp
  jsapi-tests/testParseJSON.cpp
  jsapi-tests/testPersistentRooted.cpp
  jsapi-tests/testPreserveJitCode.cpp
  jsapi-tests/testProfileStrings.cpp
  jsapi-tests/testPropCache.cpp
  jsapi-tests/testRegExp.cpp
  jsapi-tests/testResolveRecursion.cpp
  jsapi-tests/testSameValue.cpp
  jsapi-tests/testSavedStacks.cpp
  jsapi-tests/testScriptInfo.cpp
  jsapi-tests/testScriptObject.cpp
  jsapi-tests/testSetProperty.cpp
  jsapi-tests/testSetPropertyIgnoringNamedGetter.cpp
  jsapi-tests/testSourcePolicy.cpp
  jsapi-tests/testStringBuffer.cpp
  jsapi-tests/testStructuredClone.cpp
  jsapi-tests/testSymbol.cpp
  jsapi-tests/testToIntWidth.cpp
  jsapi-tests/testTypedArrays.cpp
  jsapi-tests/testUbiNode.cpp
  jsapi-tests/testUncaughtError.cpp
  jsapi-tests/testUTF8.cpp
  jsapi-tests/testWeakMap.cpp
  jsapi-tests/testXDR.cpp)

if(ENABLE_ION)
  list(APPEND JSAPI_TEST_SRCS
    jsapi-tests/testJitDCEinGVN.cpp
    jsapi-tests/testJitFoldsTo.cpp
    jsapi-tests/testJitGVN.cpp
    jsapi-tests/testJitMoveEmitterCycles-mips.cpp
    jsapi-tests/testJitMoveEmitterCycles.cpp
    jsapi-tests/testJitRangeAnalysis.cpp
    jsapi-tests/testJitRValueAlloc.cpp)
endif()

add_executable(jsapi-tests ${JSAPI_TEST_SRCS})
target_link_libraries(jsapi-tests PRIVATE js)
target_include_directories(jsapi-tests PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
add_test(NAME jsapi COMMAND jsapi-tests)
